# usefly

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  PLAN.md  README.md  TODO.md  history.txt  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci.yml  docker.yml  release.yml  validation.yml
app/: globals.css  layout.tsx  page.tsx
app/agent-runs/: page.tsx
app/metrics/: page.tsx
app/new-report/: page.tsx
app/reports/: page.tsx
archive/: task_generator_agent.py  test_exec.py
browsing_agent/: crawler_agent.py  pyproject.toml
browsing_agent/prompts/: crawler_v1.txt  task_generator.txt
components/agent-runs/: dashboard.tsx  mock-data.ts  run-details-modal.tsx  run-table.tsx
components/analytics/: dashboard.tsx
components/layout/: app-layout.tsx  header.tsx  sidebar.tsx
components/metrics/: chart-recommendations.tsx  metrics-table.tsx  mock-metrics.ts  sdk-snippet-modal.tsx
components/replay/: player.tsx  timeline.tsx
components/reports/: agent-runs-section-new.tsx  dashboard.tsx  metrics-chart.tsx  new-report-form.tsx  reports-dashboard.tsx  use-sankey-data.ts
griply/: __init__.py
griply/prompts/: v0.txt
scripts/: build.sh  dev.sh
src/: cli.py  database.py  server.py
src/common/: browser_use_common.py
src/handlers/: persona_runner.py  reports.py  scenarios.py  system_config.py  task_generation.py
tests/: conftest.py  test_analyze_website.py
ui/: next-env.d.ts  next.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo
usefly/: __init__.py  cli.py  crawler_agent_script_old.py  database.py  models.py  routes.py  server.py
(+220 files in other folders)
