[project]
name = "griply"
version = "0.1.0"
description = "Agentic UX Analytics - Test your app with AI agents"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Griply Team"}
]
keywords = ["ux", "analytics", "ai", "agents", "testing", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Web framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",

    # CLI
    "click>=8.1.0",

    # Agent dependencies
    "browser-use>=0.9.6",
    "python-dotenv==1.0.1",
    "pillow>=10.0.0",
    "imageio[ffmpeg]>=2.34.0",
    "langchain>=1.0.7",
    "langchain-openai>=1.0.3",
    "langchain-core>=1.0.5",
]

[project.scripts]
griply = "griply.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["griply*"]

[tool.setuptools.package-data]
griply = ["static/**/*", "prompts/**/*"]
