[project]
name = "automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-use>=0.9.6",
    "python-dotenv==1.0.1",
    "pillow>=10.0.0",
    "imageio[ffmpeg]>=2.34.0",
    "langchain>=1.0.7",
    "langchain-openai>=1.0.3",
    "langchain-core>=1.0.5",
]
